--- a/react/src/components/ContainerInfo/ContainerInfo.css
+++ b/react/src/components/ContainerInfo/ContainerInfo.css
@@ -3,7 +3,7 @@
   display: flex; /* Attiva Flexbox */
   align-items: flex-start; /* Allinea gli elementi (immagine e testo) in alto */
   gap: 16px; /* Spaziatura orizzontale tra immagine e blocco di testo */
-  margin: 20px; /* Margine di esempio */
+  margin-bottom: 20px; /* Margine di esempio */
   width:95%;
   height: 301px;
   background: #353535;
