--- a/react/src/components/PageTitle/PageTitle.css
+++ b/react/src/components/PageTitle/PageTitle.css
@@ -1,5 +1,5 @@
 .container-page-title {
-  margin: 10px auto;
+  margin: 16px auto;
   width: 95%;
   display: flex;
   flex-direction: row;
